@@ -274,6 +274,7 @@ typedef struct ipfix_template_elements_e_s {
 #define IPFIX_flowEndMilliseconds			153
 #define IPFIX_flowStartDeltaMicroseconds	158
 #define IPFIX_flowEndDeltaMicroseconds		159
+#define IPFIX_SystemInitTimeMiliseconds		160
 #define IPFIX_postOctetTotalCount	 	 	171
 #define IPFIX_postPacketTotalCount	 	 	172
 
